end edit course and news

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     
     <title>MARFA TAK-TIK - React Admin Academy BAHR</title>
   </head>
-  <body class="IranSansFont">
-    <div class="IranSansFont" id="root"></div>
+  <!-- style="font-family: sans;" -->
+  <!-- class="IranSansFont" -->
+  <body  style="font-family: sans;" >
+    <div id="root"></div>
     <script type="module" src="/src/index.js"></script>
     
     <!--
